--- a/智能门锁/lock/src/main/resources/application.yml
+++ b/智能门锁/lock/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 #数据源配置
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/Users?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://47.98.192.167:3306/Users?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
